Fixed right gap problem

--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -1,47 +1,23 @@
-@keyframes moveInLeft {
-    0% {
-        opacity: 0;
-        transform: translateX(-10rem);
-    }
-
-    80% {
-        transform: translateX(1rem);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
-}
-
 @keyframes moveInRight {
     0% {
-        opacity: 0;
-        transform: translateX(10rem);
+    //    opacity: 0;
+        display: none;
     }
+	1% {
+        display: flex;
+     //   opacity: 0;
+        transform: translateX(0);
+  }
 
     80% {
-        transform: translateX(-1rem);
+        transform: translateX(-100%);
     }
 
     100% {
         opacity: 1;
-        transform: translate(0);
+        
     }
 }
-
-@keyframes moveInBottom {
-    0% {
-        opacity: 0;
-        transform: translateY(3rem);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
-}
-
 @keyframes hvr-wobble-top{
     16.65%{        
         transform:skew(-12deg)
