--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -12,8 +12,9 @@ html {
 }
 
 body {
+    width: 100vw;
     box-sizing: border-box;
-    height: 80rem;
+    //height: 80rem;
 /*
     display: grid;
     grid-template-rows: min-content 40vh repeat(6, min-content);
