--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,4 +1,7 @@
 .footer {
+    color: $color-white-1;
     background-color: $color-mojo-black;
-    
+    position: absolute;
+    display: flex;   
+    padding: 1rem 4rem;
 }
