--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,9 +1,9 @@
 section {
     background-color: $color-white-1;
-    padding: 6rem 10rem;
-
+    padding: 6rem;
+/*  
     & p{
-        width: 80ch;
+       width: 80ch;
     }
-
+*/
 }
